--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -107,12 +107,12 @@ devices:
 - name: Light sensor
   image: "assets/images/devices/light_front.png"
   description: 'Infrared, red, green, blue and ultraviolet light sensor combo with white led flash.'
-  api_doc_url: "https://github.com/exaberry-devices/devices/blob/master/D034D0/README.md"
+  api_doc_url: "https://github.com/exaberry-devices/devices/blob/master/D034D0/v1.0/README.md"
   available: false
 - name: Weather sensor
   image: "assets/images/devices/weather_front.png"
   description: 'Measuring temperature, humidity and atmospheric pressure'
-  api_doc_url: "https://github.com/exaberry-devices/devices/blob/master/D034D0/README.md"
+  api_doc_url: "https://github.com/exaberry-devices/devices/blob/master/D034D0/v1.0/README.md"
   available: true
 - name: ToF proximity sensor
   image: "assets/images/devices/distance_front.png"
