--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -97,7 +97,7 @@ features:
 - {
     name: Documented,
     image: "assets/images/features/documented.png",
-    description: 'Each device has a link to its documentation. Again, you can get the documentation link by command.',
+    description: 'Each device has a link to its documentation. You can get the documentation link by command.',
     active: # Add true to select section
   }
 
@@ -109,33 +109,39 @@ devices:
   image: "assets/images/devices/power_relay.png"
   description: '50 programmable on/off steps with milliseconds delay resolution'
   api_doc_url: "/devices/documentation/694705a14dad/1.0/api/"
+  type_id: "694705a14dad"
   buy_link:
 - name: Infrared thermometer
   image: "assets/images/devices/infrared_thermo_front.png"
   description: 'Infrared thermometer for non-contact temperature measurements.'
   api_doc_url: "/devices/documentation/edd61afb4ab1/1.0/api/"
+  type_id: "edd61afb4ab1"
   buy_link:
 - name: Micro-controller
   image: "assets/images/devices/gpio.png"
   description: 'Micro-controller board with GPIO, DAC, ADC and PWM'
   api_doc_url: "/devices/documentation/0ea9052a3539/1.0/api/"
+  gui_url: "/devices/documentation/0ea9052a3539/1.0/gui/"
+  type_id: "0ea9052a3539"
   buy_link:
 - name: Weather sensors
   image: "assets/images/devices/weather_front.png"
   description: 'Measuring temperature, humidity and atmospheric pressure'
   api_doc_url: "/devices/documentation/7de673263d14/1.0/api/"
+  gui_url: "/devices/documentation/7de673263d14/1.0/gui/"
+  type_id: "7de673263d14"
   buy_link:
 - name: Light sensor
   image: "assets/images/devices/light_front.png"
   description: 'Infrared, red, green, blue and ultraviolet light sensor combo with white led flash.'
   api_doc_url:
-  # api_doc_url: "https://github.com/exaberry-devices/devices/blob/master/D90234/v1.0/README.md"
+  type_id: ""
   buy_link:
 - name: ToF proximity sensor
   image: "assets/images/devices/distance_front.png"
   description: 'Laser time-of-flight proximity sensor with millimeter accuracy.'
   api_doc_url:
-  # api_doc_url: "https://github.com/exaberry-devices/devices/blob/master/D87A80/v1.0/README.md"
+  type_id: ""
   buy_link:
 
 #-------------------------------
